syntax = "proto3";

option go_package = "go-grpc-basic/proto";

package proto;

service AuthService {
  rpc AuthenticateUser (AuthenticateUserRequest) returns (AuthenticateUserResponse) {}
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message AuthenticateUserRequest {
  string username = 1;
  string password = 2;
}

message AuthenticateUserResponse {
  bool success = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
}
